exports[`ActivityItemSystemMessage create component renders properly 1`] = `
<div
  className="system-message">
  <span>
    Test User created conversation.
  </span>
   
  2016-09-20T19:52:57.186Z
</div>
`;

exports[`ActivityItemSystemMessage tombstone component is self renders properly 1`] = `
<div
  className="system-message">
  <span>
    You deleted your message.
  </span>
   
  2016-09-20T19:52:57.186Z
</div>
`;

exports[`ActivityItemSystemMessage tombstone component renders properly 1`] = `
<div
  className="system-message">
  <span>
    Test User deleted their own message.
  </span>
   
  2016-09-20T19:52:57.186Z
</div>
`;
